[package]
name = "vohiyo"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
anyhow          = "1.0.70"
eframe          = { version = "0.21.3", default-features = false, features = ["persistence", "dark-light", "glow"] }
egui            = "0.21.0"
hashbrown       = "0.13.2"
image           = { version = "0.24.6", default-features = false, features = ["png", "gif", "jpeg"] }
indexmap        = { version = "1.9.3", features = ["serde"] }
once_cell       = "1.17.1"
reqwest         = { version = "0.11.16", features = ["json"] }
rusqlite        = { version = "0.29.0", features = ["bundled", "modern_sqlite", "time", "uuid"] }
serde           = { version = "1.0.160", features = ["derive"] }
simple_env_load = "0.2.0"
time            = { version = "0.3.20", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }
tokio           = { version = "1.27.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
toml            = { version = "0.7.3", features = ["preserve_order"] }
twitch_message  = { version = "0.1.2", features = ["std"] }
url             = "2.3.1"
uuid            = { version = "1.3.1", features = ["v4"] }


[patch.crates-io]
twitch_message = { rev = "bef7a051f828b889c0020f1a6bb459d8f5fa09ea", git = "https://github.com/museun/twitch_message" }
